update image tag in meta tag

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <meta name="description" content="Ahmed Mohamed is a frontend developer specialized in React, Next.js, and TypeScript. Creating fast, modern, and accessible web experiences." />
   <meta name="keywords" content="Ahmed Mohamed, Frontend Developer, React, Next.js, TypeScript, JavaScript, Web Developer" />
   <meta name="author" content="Ahmed Mohamed" />
-  <link rel="canonical" href="https://yourdomain.com/" />
+  <link rel="canonical" href="https://ahmed-mohamed-lilac.vercel.app/" />
 
   <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:url" content="https://ahmed-mohamed-lilac.vercel.app/" />
   <meta property="og:title" content="Ahmed Mohamed - Frontend Web Developer" />
   <meta property="og:description" content="Explore modern and accessible websites built with React, Next.js, and TypeScript by Ahmed Mohamed." />
   <meta property="og:image" content="https://yourdomain.com/assets/img/preview.jpg" />
@@ -31,13 +31,13 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://yourdomain.com/" />
+  <meta name="twitter:url" content="https://ahmed-mohamed-lilac.vercel.app/" />
   <meta name="twitter:title" content="Ahmed Mohamed - Frontend Web Developer" />
   <meta name="twitter:description" content="Passionate developer building high-performance, modern web applications using React and Next.js." />
   <meta name="twitter:image" content="https://yourdomain.com/assets/img/preview.jpg" />
 
   <!-- Canonical Link -->
-  <link rel="canonical" href="https://yourdomain.com/" />
+  <link rel="canonical" href="https://ahmed-mohamed-lilac.vercel.app/" />
 </head>
 
 <body>
