update url meta tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:url" content="https://ahmed-mohamed-lilac.vercel.app/" />
   <meta property="og:title" content="Ahmed Mohamed - Frontend Web Developer" />
   <meta property="og:description" content="Explore modern and accessible websites built with React, Next.js, and TypeScript by Ahmed Mohamed." />
-  <meta property="og:image" content="https://yourdomain.com/assets/img/preview.jpg" />
+  <meta property="og:image" content="https://ahmed-mohamed-lilac.vercel.app/assets/img/preview.jpg" />
   <meta property="og:site_name" content="Ahmed Mohamed Portfolio" />
   <meta property="og:locale" content="en_US" />
 
@@ -34,7 +34,7 @@
   <meta name="twitter:url" content="https://ahmed-mohamed-lilac.vercel.app/" />
   <meta name="twitter:title" content="Ahmed Mohamed - Frontend Web Developer" />
   <meta name="twitter:description" content="Passionate developer building high-performance, modern web applications using React and Next.js." />
-  <meta name="twitter:image" content="https://yourdomain.com/assets/img/preview.jpg" />
+  <meta name="twitter:image" content="https://ahmed-mohamed-lilac.vercel.app/assets/img/preview.jpg" />
 
   <!-- Canonical Link -->
   <link rel="canonical" href="https://ahmed-mohamed-lilac.vercel.app/" />
